[project]
authors = [{email = "seria.ati@gmail.com", name = "seriaati"}]
dependencies = [
    "fastapi>=0.114.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.30.6",
]
description = "Fix twitch clip Discord embeds."
license = {file = "LICENSE"}
name = "fxtwitch"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
